--- a/css/style.css
+++ b/css/style.css
@@ -1,138 +1,208 @@
 @charset "utf-8";
 
 /* リセットcss */
-html, body, div, span, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-abbr, address, cite, code,
-del, dfn, em, img, ins, kbd, q, samp,
-small, strong, sub, sup, var,
-b, i,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section, summary,
-time, mark, audio, video {
-    margin:0;
-    padding:0;
-    border:0;
-    outline:0;
-    font-size:100%;
-    vertical-align:baseline;
-    background:transparent;
+html,
+body,
+div,
+span,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+abbr,
+address,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+samp,
+small,
+strong,
+sub,
+sup,
+var,
+b,
+i,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+  background: transparent;
 }
 
 body {
-    line-height:1;
+  line-height: 1;
 }
 
-article,aside,details,figcaption,figure,
-footer,header,hgroup,menu,nav,section {
-    display:block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
 
 nav ul {
-    list-style:none;
+  list-style: none;
 }
 
-blockquote, q {
-    quotes:none;
+blockquote,
+q {
+  quotes: none;
 }
 
-blockquote:before, blockquote:after,
-q:before, q:after {
-    content:'';
-    content:none;
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
 }
 
 a {
-    margin:0;
-    padding:0;
-    font-size:100%;
-    vertical-align:baseline;
-    background:transparent;
+  margin: 0;
+  padding: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+  background: transparent;
 }
 
 /* change colours to suit your needs */
 ins {
-    background-color:#ff9;
-    color:#000;
-    text-decoration:none;
+  background-color: #ff9;
+  color: #000;
+  text-decoration: none;
 }
 
 /* change colours to suit your needs */
 mark {
-    background-color:#ff9;
-    color:#000;
-    font-style:italic;
-    font-weight:bold;
+  background-color: #ff9;
+  color: #000;
+  font-style: italic;
+  font-weight: bold;
 }
 
 del {
-    text-decoration: line-through;
+  text-decoration: line-through;
 }
 
-abbr[title], dfn[title] {
-    border-bottom:1px dotted;
-    cursor:help;
+abbr[title],
+dfn[title] {
+  border-bottom: 1px dotted;
+  cursor: help;
 }
 
 table {
-    border-collapse:collapse;
-    border-spacing:0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 /* change border colour to suit your needs */
 hr {
-    display:block;
-    height:1px;
-    border:0;  
-    border-top:1px solid #cccccc;
-    margin:1em 0;
-    padding:0;
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #cccccc;
+  margin: 1em 0;
+  padding: 0;
 }
 
-input, select {
-    vertical-align:middle;
+input,
+select {
+  vertical-align: middle;
 }
 
 /* その他のスタイルは以下に記述していきます */
 
 .header {
-  height: 70px;
-  background: #000;
-}
-
-.header-wrap {
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-
-.header-logo {
+  background-color: #000;
+  width: auto;
+  padding: 0 30px;
+  margin: 0 auto;
   font-size: 20px;
-  font-weight: bold;
-  margin-left: 35px;
-  color: #f2f2f2;
-  line-height: 70px;
 }
 
-.header-nav ul {
+.title {
+  color: #cccccc;
+}
+
+.header-nav-list {
   display: flex;
 }
 
-.header-nav li {
-  margin-right: 35px;
-  font-size: 16px;
+.header-nav-list a {
+  text-decoration: none;
 }
 
-.header-nav a {
-  color: #f2f2f2;
+.header-nav-item {
+  padding: 12px;
+  font-size: 14px;
+  font-weight: bold;
+  color: #cccccc;
+  list-style: none;
 }
 
 #eyecatch {
   height: 600px;
-  background: url(../img/bg1.jpg) no-repeat;
+  background: url(../img/eyecatch.jpg) no-repeat;
   background-size: cover;
   background-position: center;
   position: relative;
@@ -140,181 +210,106 @@ input, select {
 
 #eyecatch p {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 100px;
+  top: 55%;
+  left: 10%;
+  font-size: 50px;
   font-style: italic;
   font-weight: bold;
-  color: #ccc;
+  color: #fff;
   line-height: 1;
 }
 
-#about {
-  width: 80%;
-  margin: 0 auto 50px;
+#eyecatch-right {
+  width: 600px;
+  height: 30px;
+  padding: 20px;
+  text-align: left;
+  background-color: #fff;
+  color: #000000;
 }
 
-#about .section-title {
-  font-size: 30px;
-  font-weight: bold;
-  margin: 30px 0;
-  text-align: center;
-}
-
-.about-wrap{
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-}
-
-.about-right h3,
-.about-right p {
-  margin-bottom: 15px;
-}
-
-.about-left,
-.about-right {
-  width: 45%;
-}
-
-.about-right ol {
-  list-style-position: inside;
-}
-
-.about-left img{
-  display: block;
-  width: 100%;
-}
-
-#business {
-  background: url(../img/bg3.jpg) no-repeat;
-  background-size: cover;
-}
-
-#business .section-title {
-  font-size: 30px;
-  font-weight: bold;
-  text-align: center;
-  color: #fff;
-  padding: 40px 0;
+.date,
+.text {
   margin: 0;
 }
 
-.business-wrap {
+.text {
+  padding: 10px 0;
+  font-size: small;
+}
+
+.news {
+  width: 200px;
+  height: 30px;
+  padding: 10px;
   text-align: center;
+  background-color: black;
+}
+
+.box1 {
+  width: 100%;
+  height: 500px;
+  background-color: #000;
+}
+
+.box1-right {
+  width: 50px;
+  height: 30px;
+  position: relative;
+  top: 20px;
+  left: 20px;
+}
+
+.text {
+  color: #ccc;
+}
+
+p {
+  color: #ccc;
+}
+.link {
+  padding: 5px 20px; /* 上下に5px、左右に20px */
+  font-size: 14px;
+  color: #d7ba7b;
+  text-decoration: none; /* テキストのスタイルを消す */
+  border: 1px #d7ba7b solid; /* 境界線を引く */
+  border-radius: 3px; /* 要素の角を丸くする */
+  transition: 0.4s ease; /* スタイルが変化する時間 */
+}
+
+.link:hover {
+  color: #fff;
+  background: #d7ba7b;
+}
+
+.footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-
-.business-cat {
-  width: 28%;
-  background-color: rgba(51, 51, 51, 0.5);
-  padding: 20px 35px 30px;
-  box-sizing: border-box;
-  margin-bottom: 50px;
-}
-
-.business-cat h3 {
-  font-size: 18px;
-  font-weight: bold;
-  margin-bottom: 10px;
-  color: #fff;
-}
-
-.business-cat p {
-  color: #fff;
-}
-
-.business-cat img {
-  width: 100px;
-  height: auto;
-  margin: 0 auto 10px;
-}
-
-#company {
-  padding: 40px 0 70px 0;
-}
-
-#company .section-title {
-  font-size: 30px;
-  font-weight: bold;
-  margin: 30px 0;
-  text-align: center;
-}
-
-#company .contain {
-  border-collapse: collapse;
-  width: 70%;
-  margin: 0 auto;
-}
-
-#company table tr {
-  border-bottom: 1px solid #333333;
-}
-
-#company th,
-#company td {
-  text-align: left;
-}
-
-#company th {
-  padding: 10px 0;
-}
-
-#contact {
-  background: rgb(241 241 241);
-}
-
-#contact .setion-title {
-  font-size: 30px;
-  font-weight: bold;
-  text-align: center;
-  padding: 40px 0;
-  margin: 0;
-}
-
-.form {
-  width: 70%;
-  margin: 0 auto;
-}
-
-label {
-  display: inline-block;
-  width: 30%;
-}
-
-input,
-textarea {
-  box-sizing: border-box;
-  border: 1px solid #999;
-  width: 65%;
-}
-
-input {
-  margin-bottom: 20px;
-  padding: 7px;
-}
-
-textarea {
-  vertical-align: top;
-  height: 200px;
-}
-
-.button-submit {
-  text-align: center;
-}
-
-.button {
-  padding: 10px 30px;
   background-color: #000;
-  color: #fff;
-  margin: 30px 0;
+  width: auto;
+  padding: 0 30px;
+  margin: auto;
+  font-size: 20px;
 }
 
-#footer {
-  height: 80px;
-  text-align: center;
-  line-height: 80px;
+.footer-nav-list {
+  display: flex;
+}
+
+.footer-nav-list a {
+  text-decoration: none;
+}
+
+.footer-nav-item {
+  padding: 12px;
+  font-size: 14px;
+  font-weight: bold;
+  color: #cccccc;
+  list-style: none;
+}
+
+.copyright {
+  font-size: 12px;
+  color: #000;
 }
