--- a/css/style.css
+++ b/css/style.css
@@ -177,7 +177,7 @@ select {
   width: auto;
   padding: 0 30px;
   margin: 0 auto;
-  font-size: 20px;
+  font-size: 14px;
 }
 
 .title {
@@ -194,17 +194,14 @@ select {
 
 .header-nav-item {
   padding: 12px;
-  font-size: 14px;
+  font-size: 9px;
   font-weight: bold;
   color: #cccccc;
   list-style: none;
 }
 
-
-
-
 #eyecatch {
-  height: 700px;
+  height: 500px;
   background: url(../img/eyecatch.jpg) no-repeat;
   background-size: cover;
   background-position: center;
@@ -215,7 +212,7 @@ select {
   position: absolute;
   top: 55%;
   left: 10%;
-  font-size: 50px;
+  font-size: 30px;
   font-style: italic;
   font-weight: bold;
   color: #fff;
@@ -223,8 +220,8 @@ select {
 }
 
 .news-text-wrap {
-  width: 550px; 
-  height: 50px; 
+  width: 480px;
+  height: 35px;
   background-color: white;
   display: inline-flex;
   align-items: left;
@@ -236,122 +233,115 @@ select {
 
 .date {
   width: 117px;
-  height: 20px; 
-  font-size: 14px; 
+  height: 20px;
+  font-size: 10px;
   color: #000;
 }
 
 .text {
   width: 378px;
   height: 16px;
-  font-size: 15px;
+  font-size: 10px;
   color: #000;
+  padding-bottom: 15px;
+  padding-top: 5px;
 }
 
 .news-box {
   position: absolute;
   bottom: 0%;
   right: 0%;
-
 }
 
 .news-title {
   width: 147px;
-  height: 50px;
+  height: 35px;
   text-align: center;
-  font-size: 15px;
+  font-size: 12px;
   line-height: 3;
   background-color: black;
   color: #fff;
 }
 
 .top-under {
-  width: 100%; 
-  height: 550px; 
+  width: 100%;
+  height: 440px;
   position: relative;
   background-color: #000;
 }
+.orange {
+  width: 799px;
+  height: 300px;
+}
 
 .orange img {
-  width: 550px;
-  height: 360px;
   position: absolute;
-  right: 5%; 
-  bottom: 20%; 
+  right: 5%;
+  bottom: 16%;
 }
 
 .top-under-empty-box {
-  width: 100%; 
-  height: 142px; 
-  position: absolute; 
+  width: 100%;
+  height: 110px;
+  position: absolute;
   bottom: 0%;
   background-color: white;
 }
 
-
 .main-box {
-  width: 1020px;
+  width: 799px;
   height: 300px;
-  margin-top: 100px;
   background-color: transparent;
-  display: inline-flex; 
-  flex-direction: row; 
-  align-items: center; 
+  display: inline-flex;
+  flex-direction: row;
+  align-items: center;
   justify-content: flex-start;
 }
 
 .main-text-box {
-  padding-top: 41px; 
-  padding-bottom: 48px; 
-  padding-left: 73px; 
-  padding-right: 40px; 
-  margin-left: 300px;
-  width: 886px; 
-  height: 268px; 
-  background-color: rgba(196, 196, 196, 0); 
-  display: inline-flex; 
-  flex-direction: column; 
-  align-items: flex-start; 
+  margin-top: 40px;
+  padding-left: 200px;
+  padding-top: 100px;
+  width: 600px;
+  height: 200px;
+  background-color: rgba(196, 196, 196, 0);
+  display: inline-flex;
+  flex-direction: column;
+  align-items: flex-start;
   justify-content: flex-start;
   position: relative;
-  
 }
 
 .main-text1 {
-  width: 545px; 
-  height: 49px; 
-  font-size: 23px; 
+  width: 500px;
+  height: 30px;
+  font-size: 16px;
   color: white;
 }
 
 .main-text2 {
-  width: 773px; 
-  height: 87px; 
-  font-size: 12px; 
-  line-height: 20px; 
+  width: 600px;
+  height: 40px;
+  font-size: 10px;
+  line-height: 20px;
   color: white;
 }
 
 .mission-box {
-  padding-left: 10px; 
-  padding-right: 10px; 
-  padding-top: 5px; 
-  padding-bottom: 6px; 
-  margin-top:30px;
-  width: 133px; 
-  height: 39px; 
-  background-color: white; 
-  display: flex; 
-  align-items: center; 
+  width: 100px;
+  height: 25px;
+  background-color: white;
+  display: flex;
+  align-items: center;
   justify-content: center;
+  margin-top: 30px;
 }
 
 .mission-text {
-  width: 115px; 
-  height: 30px; 
-  padding-bottom: 10px;
-  font-size: 15px; 
-  line-height: 3; 
+  width: 115px;
+  height: 30px;
+  padding-top: 20px;
+  font-size: 10px;
   text-align: center;
   color: black;
   text-decoration: none;
@@ -361,384 +351,359 @@ a {
   text-decoration: none;
 }
 
-
-.center {
-  width: 100%; 
-  height: 1368px; 
-  background-color: #e5e4e4;
+.center-box {
+  width: 100%;
+  height: 1000px;
+  background-color: rgba(229.5, 227.59, 227.59, 1);
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
   position: relative;
 }
 
-.service {
-  width: 238px; 
-  height: 50px; 
-  font-size: 36px; 
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center; 
-  color: black;
-}
-
-.camera {
-  text-align: right;
-}
-
-.center-text-box {
-  width: 595px; 
-  height: 294px; 
-  background-color: white; 
-  display: flex; 
-  flex-direction: row; 
-  align-items: center; 
-  justify-content: center;
-  position: absolute;
-  top: 10%;
-  left: 20%;
-}
-
-.center-text {
-  width: 475px; 
-  height: 150px; 
-  display: inline-flex; 
-  flex-direction: column; 
-  align-items: flex-start; 
-  justify-content: flex-end;
-}
-
-.center-text1 {
-  width: 114px; 
-  height: 24px; 
-  font-size: 14px; 
-  line-height: 20px; 
-  text-align: left; 
-  color: black;
-}
-
-
-.center-text2 {
-  width: 164px; 
-  height: 28px; 
-  font-size: 13px; 
-  line-height: 20px; 
-  text-align: left;
-  color: black;
-  margin-bottom: 10px;
-}
-
-.center-text3 {
-  width: 475px; 
-  height: 40px; 
-  font-size: 12px; 
-  line-height: 20px; 
-  text-align: left; 
-  color: black;
-}
-
-.service-text-box {
-  padding-left: 4px; 
-  padding-right: 4px; 
-  padding-top: 6px; 
-  padding-bottom: 6px; 
-  width: 140px; 
-  height: 37px; 
-  background-color: white; 
-  border: 1px solid black; 
-  display: flex; 
-  flex-direction: row; 
-  align-items: center; 
-  justify-content: right;
-  margin: 0 0 0 auto;
-  margin-right: 40px;
-}
-
 .service-text {
-  width: 126px; 
-  height: 25px; 
-  font-size: 12px; 
-  line-height: 20px; 
-  text-align: center; 
+  width: 250px;
+  height: 50px;
+  font-size: 26px;
+  line-height: 1;
+  text-align: center;
   color: black;
-}
-
-
-.center-text-box2 {
-  width: 595px; 
-  height: 294px; 
-  background-color: white; 
-  display: flex; 
-  flex-direction: row; 
-  align-items: center; 
-  justify-content: center;
   position: absolute;
-  top: 65%;
-  left: 40%;
-  
+  top: 1%;
 }
 
-.center-text2 {
-  width: 475px; 
-  height: 150px; 
-  display: inline-flex; 
-  flex-direction: column; 
-  align-items: flex-start; 
-  justify-content: flex-end;
+.camera-left-box {
+  width: 420px;
+  height: 200px;
+  background-color: white;
+  display: inline-flex;
+  position: absolute;
+  top: 13%;
+  right: 40%;
 }
 
-.center-text2-1 {
-  width: 114px; 
-  height: 24px; 
-  font-size: 14px; 
-  line-height: 20px; 
-  text-align: left; 
+.camera-left-text {
+  width: 300px;
+  height: 130px;
+  display: inline-flex;
+  flex-direction: column;
+  align-items: flex-start;
+  background-color: white;
+  padding: 20px 50px 5px 30px;
+}
+
+.camera-text {
+  width: 110px;
+  height: 20px;
+  font-size: 10px;
+  text-align: left;
   color: black;
+  margin: 30px 0 5px 0;
 }
 
-.center-text2-2 {
-  width: 164px; 
-  height: 28px; 
-  font-size: 13px; 
-  line-height: 20px; 
+.camera-text2 {
+  width: 164px;
+  height: 15.14px;
+  font-size: 9px;
+  line-height: 20px;
+  text-align: left;
+  color: black;
+  margin-bottom: 5px;
+}
+
+.camera-text3 {
+  width: 430px;
+  height: 35px;
+  font-size: 10px;
+  line-height: 20px;
   text-align: left;
   color: black;
 }
 
-.center-text2-3 {
-  width: 475px; 
-  height: 40px; 
-  font-size: 12px; 
-  line-height: 20px; 
-  text-align: left; 
+.survice-btn1 {
+  width: 100px;
+  height: 24px;
+  background-color: white;
+  border: 1px solid black;
+  margin-left: 86%;
+  margin-top: 10px;
+  justify-content: right;
+}
+
+.survice-btn-text1 {
+  width: 100px;
+  height: 24px;
+  font-size: 10px;
+  line-height: 20px;
+  text-align: center;
   color: black;
 }
 
-.service-text-box2 {
-  padding-left: 4px; 
-  padding-right: 4px; 
-  padding-top: 6px; 
-  padding-bottom: 6px; 
-  width: 140px; 
-  height: 37px; 
-  background-color: white; 
-  border: 1px solid black; 
-  display: flex; 
-  flex-direction: row; 
-  align-items: center; 
-  justify-content: right;
-  margin: 0 0 0 auto;
-  margin-right: 40px;
+.fire-right-box {
+  width: 420px;
+  height: 200px;
+  background-color: white;
+  display: inline-flex;
+  position: absolute;
+  top: 63%;
+  right: 22%;
 }
 
-.service-text2-1 {
-  width: 126px; 
-  height: 25px; 
-  font-size: 12px; 
-  line-height: 20px; 
-  text-align: center; 
+.fire-right-text {
+  width: 300px;
+  height: 130px;
+  display: inline-flex;
+  flex-direction: column;
+  align-items: flex-start;
+  background-color: white;
+  padding: 20px 50px 5px 30px;
+}
+
+.fire-text {
+  width: 110px;
+  height: 20px;
+  font-size: 10px;
+  text-align: left;
+  color: black;
+  margin: 30px 0 5px 0;
+}
+
+.fire-text2 {
+  width: 164px;
+  height: 15.14px;
+  font-size: 9px;
+  line-height: 20px;
+  text-align: left;
+  color: black;
+  margin-bottom: 5px;
+}
+
+.fire-text3 {
+  width: 430px;
+  height: 35px;
+  font-size: 10px;
+  line-height: 20px;
+  text-align: left;
+  color: black;
+}
+
+.survice-btn2 {
+  width: 100px;
+  height: 24px;
+  background-color: white;
+  border: 1px solid black;
+  margin-left: 86%;
+  margin-top: 10px;
+  justify-content: right;
+}
+
+.survice-btn-text2 {
+  width: 100px;
+  height: 24px;
+  font-size: 10px;
+  line-height: 20px;
+  text-align: center;
   color: black;
 }
 
 .under {
-  width: 100%; 
-  height: 784px; 
-  background-color: white; 
+  width: 100%;
+  height: 600px;
+  background-color: white;
   position: relative;
 }
 
 .picture-box {
-  width: 100%; 
-  height: 250px; 
-  margin-top: 10%; 
-  position: relative; 
-  display: inline-flex; 
-  flex-direction: row; 
-  align-items:center; 
-  justify-content:space-around;
-}
-  
-.text-company-box {
-  width: 400px; 
-  height: 200px; 
-  flex-direction: column; 
-  background-color: transparent; 
-  justify-content: center;
-  align-items: center; 
-  display: flex; 
-  position:absolute;
-  top: 10%;
-  left: 10%;
+  width: 100%;
+  height: 250px;
+  margin-top: 8%;
+  position: relative;
+  display: inline-flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
 }
 
+.text-company-box {
+  width: 400px;
+  height: 200px;
+  flex-direction: column;
+  background-color: transparent;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  position: absolute;
+  top: 10%;
+  left: 5%;
+}
 
 .text-company {
-  width: 192px; 
-  height: 36px; 
-  font-size: 36px; 
-  text-align: center; 
-  line-height: 15px; 
+  width: 192px;
+  height: 36px;
+  font-size: 24px;
+  text-align: center;
+  line-height: 15px;
   color: white;
 }
 
-
 .text-company2 {
-  width: 96px; 
-  height: 19px; 
-  font-size: 14px; 
-  text-align: center; 
-  line-height: 15px; 
+  width: 96px;
+  height: 19px;
+  font-size: 14px;
+  text-align: center;
+  line-height: 15px;
   color: white;
 }
 
 .text-recruit-box {
-  width: 400px; 
-  height: 200px; 
-  flex-direction: column; 
-  background-color: transparent; 
+  width: 400px;
+  height: 200px;
+  flex-direction: column;
+  background-color: transparent;
   justify-content: center;
-  align-items: center; 
-  display: flex; 
-  position:absolute;
+  align-items: center;
+  display: flex;
+  position: absolute;
   top: 10%;
-  right: 10%;
+  right: 5%;
 }
-
 
 .text-recruit {
-  width: 192px; 
-  height: 36px; 
-  font-size: 36px; 
-  text-align: center; 
-  line-height: 15px; 
+  width: 192px;
+  height: 36px;
+  font-size: 24px;
+  text-align: center;
+  line-height: 15px;
   color: white;
 }
-
 
 .text-recruit2 {
-  width: 96px; 
-  height: 19px; 
-  font-size: 14px; 
-  text-align: center; 
-  line-height: 15px; 
+  width: 96px;
+  height: 19px;
+  font-size: 14px;
+  text-align: center;
+  line-height: 15px;
   color: white;
 }
 
-/* ここから */
 .FAQ-box {
-  padding-top: 8px; 
-  padding-bottom: 9px; 
-  padding: right 5px; 
-  width: 150; 
-  height: 100px; 
-  background-color: black; 
-  display: flex; 
-  flex-direction:row; 
-  align-items:center; 
-  justify-content:space-around; 
-  margin: 130px; 
-  position:relative; 
+  width: 780px;
+  height: 90px;
+  background-color: black;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  margin-top: 50px;
+  position: relative;
+  left: 13%;
 }
 
 .FAQ {
-  width: auto; 
-  height: 36px; 
-  font-size: 36px; 
-  line-height: 1; 
-  text-align: center; 
-  color: white; 
-  margin-left: 50px;
+  width: auto;
+  height: 36px;
+  font-size: 24px;
+  line-height: 1;
+  text-align: center;
+  color: white;
+  margin-left: 30px;
+  margin-top: 10px;
+  padding-right: 40px;
 }
 
 .question {
-  width: 200px; 
-  height: 33px; 
-  font-size: 17px; 
-  line-height: 1; 
-  text-align: center; 
-  color: white; 
-  margin-right: 480px; 
-  margin-top:15px;
+  width: 120px;
+  height: 33px;
+  font-size: 12px;
+  line-height: 1;
+  text-align: center;
+  color: white;
+  margin-right: 334px;
+  margin-top: 20px;
 }
 
 .contact-box {
-  width: 100%; 
-  height: 517px; 
-  background-color: white; 
-  position: relative; 
-  background: url(../img/contact-bg.jpg) no-repeat; 
-  background-size: cover; 
-  background-position: center; 
+  width: 100%;
+  height: 380px;
+  background-color: white;
+  position: relative;
+  background: url(../img/contact-bg.jpg) no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
 .contact-text-box {
-  width: 1000px; 
-  height: 435px; 
-  left: 15%; 
-  top: 20%; 
-  position: absolute; 
-  background-color: parents; 
-  display: inline-flex; 
-  flex-direction: column; 
-  align-items: center; 
+  width: 100%;
+  height: 280px;
+  left: 0%;
+  top: 30%;
+  position: absolute;
+  background-color: parents;
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
   justify-content: flex-start;
 }
 
 .contact-text-1 {
-  width: 145px; 
-  height: 43px; 
-  font-size: 36px; 
-  line-height: 15px; 
-  text-align: center; 
+  width: 145px;
+  height: 43px;
+  font-size: 25px;
+  line-height: 15px;
+  text-align: center;
   color: white;
 }
 
 .contact-text-2 {
-  width: 151px; 
-  height: 33px; 
-  font-size: 18px; 
-  line-height: 15px; 
-  text-align: center; 
+  width: 151px;
+  height: 33px;
+  font-size: 14px;
+  line-height: 15px;
+  text-align: center;
   color: white;
 }
 
 .contact-text-3 {
-  width: 490px; 
-  height: 54px; 
-  font-size: 30px; 
-  line-height: 15px; 
-  text-align: center; 
+  width: 490px;
+  height: 54px;
+  font-size: 24px;
+  line-height: 15px;
+  text-align: center;
   color: white;
 }
 
 .contact-text-4 {
-  width: 959px; 
-  height: 43px; 
-  font-size: 12px; 
-  line-height: 15px; 
-  text-align: center; 
+  width: 959px;
+  height: 43px;
+  font-size: 12px;
+  line-height: 15px;
+  text-align: center;
   color: white;
 }
 
 .contact-btn-box {
-  padding-left: 14px; 
-  padding-right: 14px; 
-  padding-top: 1px; 
-  padding-bottom: 1px; 
-  width: 130px; 
-  height: 34px; 
-  background-color: parents; 
-  border: 1px solid white; 
-  display: flex; 
-  flex-direction: row; 
-  align-items: center; 
+  padding-left: 14px;
+  padding-right: 14px;
+  padding-top: 1px;
+  padding-bottom: 1px;
+  width: 80px;
+  height: 20px;
+  background-color: parents;
+  border: 1px solid white;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
   justify-content: center;
 }
 
 .contact-btn-text {
-  width: 102px; 
-  height: 32px; 
-  font-size: 12px; 
-  line-height: 15px; 
-  text-align: center; 
-  color: white; 
+  width: 102px;
+  height: 32px;
+  font-size: 12px;
+  line-height: 15px;
+  text-align: center;
+  color: white;
   margin-top: 15px;
 }
 
@@ -746,13 +711,13 @@ p {
   color: #ccc;
 }
 .link {
-  padding: 5px 20px; 
+  padding: 5px 20px;
   font-size: 14px;
   color: #d7ba7b;
-  text-decoration: none; 
+  text-decoration: none;
   border: 1px #d7ba7b solid;
-  border-radius: 3px; 
-  transition: 0.4s ease; 
+  border-radius: 3px;
+  transition: 0.4s ease;
 }
 
 .link:hover {
@@ -767,8 +732,8 @@ p {
   background-color: #000;
   width: auto;
   padding: 0 30px;
-  margin: auto;
-  font-size: 20px;
+  margin: 0 auto;
+  font-size: 14px;
 }
 
 .footer-nav-list {
@@ -781,36 +746,30 @@ p {
 
 .footer-nav-item {
   padding: 12px;
-  font-size: 14px;
+  font-size: 9px;
   font-weight: bold;
   color: #cccccc;
   list-style: none;
 }
 
-.copyright {
-  font-size: 12px;
-  color: #000;
-}
-
 .footer-sub {
-  width: 100%; 
-  height: 40px; 
-  background-color: black; 
-  display: flex; 
-  flex-direction: row; 
-  align-items: center; 
+  width: 100%;
+  height: 30px;
+  background-color: black;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
   justify-content: center;
 }
 
 .footer-sub-text {
-  width: 373px; 
-  height: 30px; 
-  font-size: 14px; 
-  line-height: 15px; 
-  text-align: center; 
+  width: 373px;
+  height: 30px;
+  font-size: 10px;
+  line-height: 15px;
+  text-align: center;
   color: white;
 }
-
 
 /* 外枠ここから*/
 html:before,
@@ -825,7 +784,7 @@ body:after {
 }
 /* 上 */
 html:before {
-  height: 0; 
+  height: 0;
   width: 100vw;
   left: 0;
   top: 0;
@@ -833,7 +792,7 @@ html:before {
 
 /* 右 */
 html:after {
-  width: 150px;
+  width: 200px;
   height: 100vh;
   right: 0;
   top: 0;
@@ -841,7 +800,7 @@ html:after {
 
 /* 下 */
 body:before {
-  height: 10px;
+  height: 0px;
   width: 100vw;
   bottom: 0;
   left: 0;
@@ -849,10 +808,13 @@ body:before {
 
 /* 左 */
 body:after {
-  width: 150px;
+  width: 200px;
   height: 100vh;
   top: 0;
   left: 0;
 }
 
 /* 外枠ここまで */
+.main {
+  margin: 0px 200px;
+}
