--- a/css/style.css
+++ b/css/style.css
@@ -201,7 +201,7 @@ select {
 }
 
 #eyecatch {
-  height: 500px;
+  height: 700px;
   background: url(../img/eyecatch.jpg) no-repeat;
   background-size: cover;
   background-position: center;
@@ -211,8 +211,8 @@ select {
 #eyecatch > p {
   position: absolute;
   top: 55%;
-  left: 10%;
-  font-size: 30px;
+  left: 13%;
+  font-size: 40px;
   font-style: italic;
   font-weight: bold;
   color: #fff;
@@ -220,8 +220,8 @@ select {
 }
 
 .news-text-wrap {
-  width: 480px;
-  height: 35px;
+  width: 600px;
+  height: 50px;
   background-color: white;
   display: inline-flex;
   align-items: left;
@@ -255,10 +255,10 @@ select {
 
 .news-title {
   width: 147px;
-  height: 35px;
+  height: 50px;
   text-align: center;
   font-size: 12px;
-  line-height: 3;
+  line-height: 4;
   background-color: black;
   color: #fff;
 }
@@ -276,7 +276,7 @@ select {
 
 .orange img {
   position: absolute;
-  right: 5%;
+  right: 7%;
   bottom: 16%;
 }
 
@@ -300,7 +300,7 @@ select {
 
 .main-text-box {
   margin-top: 40px;
-  padding-left: 200px;
+  padding-left: 400px;
   padding-top: 100px;
   width: 600px;
   height: 200px;
@@ -315,7 +315,7 @@ select {
 .main-text1 {
   width: 500px;
   height: 30px;
-  font-size: 16px;
+  font-size: 17px;
   color: white;
 }
 
@@ -353,7 +353,7 @@ a {
 
 .center-box {
   width: 100%;
-  height: 1000px;
+  height: 1400px;
   background-color: rgba(229.5, 227.59, 227.59, 1);
   display: inline-flex;
   flex-direction: column;
@@ -374,12 +374,12 @@ a {
 }
 
 .camera-left-box {
-  width: 420px;
-  height: 200px;
+  width: 600px;
+  height: 350px;
   background-color: white;
   display: inline-flex;
   position: absolute;
-  top: 13%;
+  top: 10%;
   right: 40%;
 }
 
@@ -390,26 +390,26 @@ a {
   flex-direction: column;
   align-items: flex-start;
   background-color: white;
-  padding: 20px 50px 5px 30px;
+  padding: 100px;
 }
 
 .camera-text {
   width: 110px;
   height: 20px;
-  font-size: 10px;
+  font-size: 14px;
   text-align: left;
   color: black;
-  margin: 30px 0 5px 0;
+  margin: 20px 0 10px 0;
 }
 
 .camera-text2 {
   width: 164px;
   height: 15.14px;
-  font-size: 9px;
+  font-size: 12px;
   line-height: 20px;
   text-align: left;
   color: black;
-  margin-bottom: 5px;
+  margin-bottom: 10px;
 }
 
 .camera-text3 {
@@ -441,8 +441,8 @@ a {
 }
 
 .fire-right-box {
-  width: 420px;
-  height: 200px;
+  width: 600px;
+  height: 350px;
   background-color: white;
   display: inline-flex;
   position: absolute;
@@ -457,26 +457,26 @@ a {
   flex-direction: column;
   align-items: flex-start;
   background-color: white;
-  padding: 20px 50px 5px 30px;
+  padding: 100px;
 }
 
 .fire-text {
   width: 110px;
   height: 20px;
-  font-size: 10px;
+  font-size: 14px;
   text-align: left;
   color: black;
-  margin: 30px 0 5px 0;
+  margin: 20px 0 10px 0;
 }
 
 .fire-text2 {
   width: 164px;
   height: 15.14px;
-  font-size: 9px;
+  font-size: 12px;
   line-height: 20px;
   text-align: left;
   color: black;
-  margin-bottom: 5px;
+  margin-bottom: 10px;
 }
 
 .fire-text3 {
@@ -535,7 +535,7 @@ a {
   display: flex;
   position: absolute;
   top: 10%;
-  left: 5%;
+  left: 10%;
 }
 
 .text-company {
@@ -566,7 +566,7 @@ a {
   display: flex;
   position: absolute;
   top: 10%;
-  right: 5%;
+  right: 10%;
 }
 
 .text-recruit {
@@ -588,7 +588,7 @@ a {
 }
 
 .FAQ-box {
-  width: 780px;
+  width: 1100px;
   height: 90px;
   background-color: black;
   display: flex;
@@ -597,7 +597,7 @@ a {
   justify-content: space-around;
   margin-top: 50px;
   position: relative;
-  left: 13%;
+  left: 12%;
 }
 
 .FAQ {
@@ -607,9 +607,9 @@ a {
   line-height: 1;
   text-align: center;
   color: white;
-  margin-left: 30px;
+  margin-left: 10px;
   margin-top: 10px;
-  padding-right: 40px;
+  padding-right: 20px;
 }
 
 .question {
@@ -619,7 +619,7 @@ a {
   line-height: 1;
   text-align: center;
   color: white;
-  margin-right: 334px;
+  margin-right: 475px;
   margin-top: 20px;
 }
 
@@ -771,8 +771,8 @@ p {
   color: white;
 }
 
-/* 外枠ここから*/
-html:before,
+/* 外枠ここから */
+/* html:before,
 html:after,
 body:before,
 body:after {
@@ -813,8 +813,5 @@ body:after {
   top: 0;
   left: 0;
 }
-
-/* 外枠ここまで */
-.main {
-  margin: 0px 200px;
-}
+ */
+/* 外枠ここまで
